[gd_scene load_steps=4 format=3 uid="uid://bw0nia3qltuvw"]

[ext_resource type="Texture2D" uid="uid://o1fvm6uqfgpj" path="res://lava_type_02/head.png" id="1_3qput"]
[ext_resource type="Script" path="res://wormboss.gd" id="1_uuar1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5u37y"]
radius = 33.1361

[node name="Head" type="CharacterBody2D"]
collision_mask = 0
script = ExtResource("1_uuar1")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("1_3qput")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5u37y")

[node name="Timer" type="Timer" parent="."]

[node name="power_timer" type="Timer" parent="."]

[node name="Timer2" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="power_timer" to="." method="_on_power_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
